fix alignment of zip and default text icon

--- a/src/icons/default/default.less
+++ b/src/icons/default/default.less
@@ -1,5 +1,6 @@
 .default-file {
   background-image: url('../images/default.svg');
   background-repeat: no-repeat;
-  background-size: 100%, 100%;
+  background-size: 80%;
+  background-position: center;
 }
