--- a/src/icons/zip/zip.less
+++ b/src/icons/zip/zip.less
@@ -2,4 +2,5 @@
   background-image: url('../images/zip.svg');
   background-repeat: no-repeat;
   background-size: 100%, 100%;
+  background-position: center;
 }
